kubernetes/clusters/home/apps/rackpeek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rackpeek
  namespace: rackpeek
  labels:
    app.kubernetes.io/name: rackpeek
spec:
  selector:
    app.kubernetes.io/name: rackpeek
  ports:
    - name: http
      port: 8080
      targetPort: http
